# QT_MediaPlay

./: CMakeLists.txt  ErrorPopup.qml  Main.qml  MetadataInfo.qml  PlayerMenuBar.qml  PlaylistInfo.qml  README.md  SettingsInfo.qml  UrlPopup.qml  main.cpp
Config/: CMakeLists.txt  Config.qml
MediaControls/: AudioControl.qml  CMakeLists.txt  CustomButton.qml  CustomSlider.qml  MediaControlsControls.qml  PlaybackControl.qml  PlaybackRateControl.qml  PlaybackSeekControl.qml  qmldir
